# check_goodwe

./: .gitignore  README.md  check_goodwe.json.template  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: mypy.yml  pylint.yml  pytest.yml
check_goodwe/: __init__.py  battery.py  check_goodwe_battery.py  check_goodwe_faults.py
tests/: test_battery.py
