[tool.poetry]
name = "check-goodwe"
version = "0.1.4"
description = "Monitoring checks for GoodWe solar inverters, designed for Nagios et al"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygoodwe = "^0.1.9"
pydantic = "^2.11.5"

[tool.poetry.scripts]
check_goodwe_battery = "check_goodwe.check_goodwe_battery:main"
check_goodwe_faults = "check_goodwe.check_goodwe_faults:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
pytest = "^8.3.5"
mypy = "^1.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "check-goodwe"
description = ""
license = "MIT"
version = "0.1.1"
readme = "README.md"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
