[project]
name = "check-goodwe"
description = "Monitoring checks for GoodWe solar inverters, designed for Nagios et al"
license = { text = "MIT" }
version = "0.1.4"
readme = "README.md"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
requires-python = "<4.0,>=3.11"
dependencies = ["pygoodwe<1.0.0,>=0.1.7", "pydantic<3.0.0,>=2.9.0"]

[project.scripts]
check_goodwe_battery = "check_goodwe.check_goodwe_battery:main"
check_goodwe_faults = "check_goodwe.check_goodwe_faults:main"

[dependency-groups]
dev = ["ruff<1.0.0,>=0.6.4", "pytest<9.0.0,>=8.3.2", "mypy<2.0.0,>=1.11.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
